--- a/src/styles/support.css
+++ b/src/styles/support.css
@@ -5,6 +5,8 @@
     padding: 20px;
     background-color: var(--color-background);
     color: var(--color-text);
+    overflow-y: auto; /*Ensures that the page is scrollable*/
+    min-height: 100vh;
 }
 
 /* Styling for the container holding support cards */
@@ -60,7 +62,6 @@
 /* Content inside the card */
 .card-content {
     padding: 15px;
-    background-color: var(--color-background-content);
     color: var(--color-text);
     display: none;
 }
@@ -82,23 +83,50 @@
 }
 /* Fixed height to ensure full map visibility */
 .map-container {
-    height: 1200px; 
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+    height: 630px; 
     width: 100%;
 }
 
 .map-card .leaflet-container {
-    width: 100%;
-    height: 1200px; 
+    max-width: 1000px;
+    width: 60%;
+    margin-top: var(--spacing-medium);
 }
 
-.clinic-name {
-    color: var(--color-background-content);
+.leaflet-container a {
+    color: var(--color-a-clinic) !important; /*Increase Specificity - Ensure chosen anchor color is displayed over the standard color from leaflet*/
+    font-weight: bolder;
+    font-size: var(--font-size-medium);
+}
+
+.leaflet-container a:hover{
+    text-decoration: underline;
+}
+
+.leaflet-popup-content{
+    width: 330px !important; /*Increase Specificity - Ensure the width of the popup is wide enough*/
+}
+
+.clinic-info-row{
+    display: inline;
+}
+#clinic-name {
+    color: var( --color-clinic-name); /*Increase Specificity - Ensure there are no more specific selectors that override the .card-content background color (also used in downloads.css) */
+    font-size: var(--font-size-medium);
 }
 
 .clinic-info {
-    color: var(--color-text);
+    color: var( --color-text-clinic);
     font-weight: bold;
+    font-size: var(--font-size-small);
     margin-bottom: 5px;
+}
+
+.leaflet-popup-content p{
+    font-size: var(--font-size-small);
 }
 
 /* Footer-like container for copyright styling */
@@ -122,5 +150,11 @@
         width: 100%;
         height: auto;
         position: relative;
+    }
+
+    .map-card .leaflet-container {
+        max-width: 1000px;
+        width: 100%;
+        margin-top: var(--spacing-medium);
     }
 }
