--- a/src/styles/variables.css
+++ b/src/styles/variables.css
@@ -35,7 +35,9 @@
     --input-hover-border-color: #1abc9cc2;
 
     /*support.css*/
-    --color-background-content: #0b483b;
+    --color-clinic-name: #2f4f4f;
+    --color-text-clinic: #0b483b;
+    --color-a-clinic: #4b0082;
 
     /* download.css specific colors */
     --section-international-color: #b8860b;
